# z-apply-core

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: core-runtime-postmortem.md
src/z_apply_core/: __init__.py  __main__.py  application_artifacts.py  browser.py  browser_config.py  browser_form_inspection.py  browser_observation.py  browser_readiness.py  browser_session.py  browser_submission.py  browser_targeting.py  (+16 more)
tests/: test_action_order.py  test_answer_writer.py  test_answer_writer_memory_prompt.py  test_application_artifacts.py  test_application_outcome.py  test_auth_orchestrator.py  test_authenticate_default_account.py  test_browser_action_verification.py  test_browser_config.py  test_browser_mutation_progress.py  test_browser_operation.py  test_browser_readiness.py  test_browser_specialist_prompt.py  test_browser_submission_guard.py  test_browser_tools_strip_empty.py  test_browser_upload.py  test_candidate_delegation.py  test_candidate_memory.py  test_capability_context.py  test_config_human.py  test_deepagent_stream.py  test_duplicate_mutation_guard.py  test_fill_slice_config.py  test_gmail_tools.py  test_goal_runner.py  test_graph_cleanup.py  test_human_escalation_guard.py  test_integration_runtime_contracts.py  test_integrations_service.py  test_model_policy.py  test_multimodal_browser.py  test_no_progress_guard.py  test_orchestrator_node.py  test_orchestrator_prompt.py  test_orchestrator_trace_validation.py  test_platform_playbooks.py  test_post_task_verification.py  test_protocol_guard.py  test_required_tool_choice.py  test_retry_policy.py  (+8 more)
(+74 files in other folders)
